# yberreby.github.io

./: .gitignore  CLAUDE.md  README.md  config.toml  custom.css  index.html  robots.txt  sitemap.xml
.github/workflows/: main.yml
about/: index.html
content/: _index.md  test.md
content/pages/: _index.md  about.md  d3-demo.md  hackathons.md  nourishment.md  readings.md  resources.md
content/pages/discrete-maze-backprop-candle-wasm/: index.md  training-worker.js
content/posts/: _index.md
content/posts/2025-07-13-back-to-mac/: index.md
content/posts/2025-07-13-hello/: index.md
content/posts/2025-07-18-back-to-mac/: index.md
content/posts/hello/: index.md
d3-demo/: index.html
discrete-maze-backprop-candle-wasm/: index.html  training-worker.js
discrete-maze-backprop-candle-wasm/code/: Cargo.toml
discrete-maze-backprop-candle-wasm/code/pkg/: diffmaze.js  diffmaze_bg.wasm
discrete-maze-backprop-candle-wasm/code/src/: lib.rs
hackathons/: index.html
nourishment/: index.html
page/1/: index.html
posts/: index.html
posts/forever-is-always/: index.html
posts/hands-free-claude-code/: index.html
posts/i-used-arch-btw-macos-day-1/: index.html
posts/policy-gradient-estimation-in-deep-rl/: index.html
posts/probabilistic-avocados/: index.html
posts/strangedraw/: index.html
posts/thoughts-on-apple-mlx/: index.html
posts/ungeneratable-writing/: index.html
resources/: index.html
sass/: custom.scss
static/: CNAME
templates/: bib_macros.html  index.html  page.html  section.html
templates/shortcodes/: reference.html
test/: index.html
(+14 files in other folders)
