[package]
name = "diffmaze"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
rand = "0.9.2"
wasm-bindgen = "0.2"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }
wasm-bindgen-futures = "0.4"

[profile.release]
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Single codegen unit for better optimization
# debug = true
strip = true # Strip symbols
